test/spec_vectors/unreached-invalid/fail/module_48.wat
(module (func $type-unary-num-vs-void-after-nested-unreachable (block (unreachable)) (block (drop (i32.eqz (nop))))))